--- a/package.json
+++ b/package.json
@@ -15,13 +15,18 @@
     "@fortawesome/free-solid-svg-icons": "^6.2.0",
     "@fortawesome/react-fontawesome": "^0.2.0",
     "axios": "^1.1.2",
+    "formidable": "^2.0.1",
+    "multer": "^1.4.5-lts.1",
     "next": "12.3.1",
+    "next-connect": "^0.13.0",
     "nookies": "^2.5.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "styled-components": "^5.3.6"
   },
   "devDependencies": {
+    "@types/formidable": "^2.0.5",
+    "@types/multer": "^1.4.7",
     "@types/node": "18.8.2",
     "@types/react": "18.0.21",
     "@types/react-dom": "18.0.6",
