--- a/package.json
+++ b/package.json
@@ -15,12 +15,15 @@
     "@fortawesome/free-solid-svg-icons": "^6.2.0",
     "@fortawesome/react-fontawesome": "^0.2.0",
     "axios": "^1.1.2",
+    "chart.js": "^3.9.1",
+    "chartjs-plugin-datalabels": "^2.1.0",
     "formidable": "^2.0.1",
     "multer": "^1.4.5-lts.1",
     "next": "12.3.1",
     "next-connect": "^0.13.0",
     "nookies": "^2.5.2",
     "react": "18.2.0",
+    "react-chartjs-2": "^4.3.1",
     "react-dom": "18.2.0",
     "styled-components": "^5.3.6"
   },
